--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
             </div>
         </div>
     </div>
-    <!-- ============ End header =============-->
-    <!-- ----heaer menu reponsivve mobile---- -->
+    <!-- ============== End header ===============-->
+    <!-- ======heaer menu reponsivve mobile====== -->
     <div class="mobile">
         <div class="mobile__main">
             <div class="mobile__header">
